--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "social-network-api",
     "version": "1.0.0",
-    "description": "An API for a social network web application where users can share their thoughts, react to friends’ thoughts, and create a friend list",
+    "description": "An API for a social network web application where users can share their thoughts, react to friends' thoughts, and create a friend list",
     "main": "server.js",
     "scripts": {
         "start": "node server",
