--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-    "name": "social-network-api",
-    "version": "1.0.0",
-    "description": "An API for a social network web application where users can share their thoughts, react to friends' thoughts, and create a friend list",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server",
-        "dev": "nodemon server",
-        "seed": "node utils/seed"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/RichardZhang01/social-network-api.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/RichardZhang01/social-network-api/issues"
-    },
-    "homepage": "https://github.com/RichardZhang01/social-network-api#readme",
-    "dependencies": {
-        "express": "^4.18.1",
-        "moment": "^2.29.4",
-        "mongoose": "^6.4.4"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.19"
-    }
+  "name": "social-network-api",
+  "version": "1.0.0",
+  "description": "An API for a social network web application where users can share their thoughts, react to friends' thoughts, and create a friend list",
+  "main": "server.js",
+  "license": "MIT",
+  "keywords": [],
+  "author": "Richard Zhang",
+  "scripts": {
+    "start": "node server.js",
+    "seed": "node utils/seed.js",
+    "dev": "nodemon server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RichardZhang01/social-network-api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/RichardZhang01/social-network-api/issues"
+  },
+  "homepage": "https://github.com/RichardZhang01/social-network-api#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "moment": "^2.29.4",
+    "mongoose": "^6.4.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
